--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@azure/msal-browser": "^4.26.1",
     "@azure/msal-react": "^3.0.21",
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
@@ -28,6 +29,8 @@
     "moment": "^2.30.1",
     "react": "^19.1.1",
     "react-big-calendar": "^1.19.4",
+    "react-calendar": "^6.0.0",
+    "react-datepicker": "^8.9.0",
     "react-day-picker": "^9.11.0",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
