--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-window": "^1.8.9",
     "recharts": "^3.3.0",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.14"
+    "tailwindcss": "^4.1.14",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
